--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,6 +1,15 @@
 version: '3'
 
 services:
+  adminer:
+    image: adminer
+    ports:
+      - 8080:8080
+    networks:
+      - authNet
+      - shopNet
+
+  #===================================================================================
   authenticationDB:
     image: mysql
     environment:
@@ -19,6 +28,7 @@ services:
       - DATABASE_URL=authenticationDB
     depends_on:
       - authenticationDB
+    restart: on-failure
     networks:
       - authNet
   authentication:
@@ -32,10 +42,68 @@ services:
     networks:
       - authNet
 
+  #===================================================================================
+
+  spark-master:
+    image: bde2020/spark-master:3.3.0-hadoop3.3
+    container_name: spark-master
+    ports:
+      - 8085:8080
+      - 7077:7077
+    environment:
+      - INIT_DAEMON_STEP=setup_spark
+#    depends_on:
+#      - shopDBmigration
+    networks:
+      - sparkNet
+
+  spark-worker-1:
+    image: bde2020/spark-worker:3.3.0-hadoop3.3
+    container_name: spark-worker-1
+    depends_on:
+      - spark-master
+    ports:
+      - 8081:8081
+    environment:
+      - SPARK_MASTER=spark://spark-master:7077
+    networks:
+      - sparkNet
+
+#  spark-worker-2:
+#    image: bde2020/spark-worker:3.3.0-hadoop3.3
+#    container_name: spark-worker-2
+#    depends_on:
+#      - spark-master
+#    ports:
+#      - 8082:8081
+#    environment:
+#      - SPARK_MASTER=spark://spark-master:7077
+#    networks:
+#      - sparkNet
+
+  sparkapp:
+    image: statistics
+    environment:
+      - PRODUCTION=True
+#      - SOCKET_IP=0.0.0.0
+#      - SOCKET_PORT=9090
+      - SPARKAPP_IP=sparkapp
+      - DATABASE_URL=shopAppDB
+      - ENABLE_INIT_DEAMON=false
+    restart: on-failure
+    depends_on:
+      - spark-master
+      - spark-worker-1
+    ports:
+      - 5004:5004
+    networks:
+      - sparkNet
+
+  #===================================================================================
   shopAppDB:
     image: mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=123
+      - MYSQL_ROOT_PASSWORD=root
     ports:
       - "3307:3306"
 
@@ -48,16 +116,19 @@ services:
       - shopData:/var/lib/mysql
     networks:
       - shopNet
+      - sparkNet
 
   shopDBmigration:
     image: shopmigration
     environment:
       - DATABASE_URL=shopAppDB
+#    restart: on-failure
     depends_on:
-      - shopAppDB
-      #  condition: service_healthy
+      shopAppDB:
+        condition: service_healthy
     networks:
       - shopNet
+      - sparkNet
 #    build:
 #      context: .
 #      dockerfile: shopdbmigration.dockerfile
@@ -67,16 +138,17 @@ services:
 #    container_name: owner
     environment:
       - DATABASE_URL=shopAppDB
-#      - SPARKAPP_URL=sparkapp
+      - SPARKAPP_URL=sparkapp
 #      - ETH_URL=blockchain
     depends_on:
       - shopDBmigration
-#      - sparkapp
+      - sparkapp
     ports:
       - 5000:5000
+    restart: on-failure
     networks:
       - shopNet
-#      - sparknetwork
+      - sparkNet
 #      - ethnetwork
 #    build:
 #      context: .
@@ -86,24 +158,48 @@ services:
 #    container_name: owner
     environment:
       - DATABASE_URL=shopAppDB
-#      - SPARKAPP_URL=sparkapp
+      - SPARKAPP_URL=sparkapp
 #      - ETH_URL=blockchain
+    restart: on-failure
     depends_on:
       - shopDBmigration
-#      - sparkapp
+      - sparkapp
     ports:
       - 5001:5001
     networks:
       - shopNet
-#      - sparknetwork
+      - sparkNet
 #      - ethnetwork
 #    build:
 #      context: .
 #      dockerfile: owner.dockerfile
+
+  courier:
+    image: courier
+#    container_name: owner
+    environment:
+      - DATABASE_URL=shopAppDB
+      - SPARKAPP_URL=sparkapp
+#      - ETH_URL=blockchain
+    restart: on-failure
+    depends_on:
+      - shopDBmigration
+      - sparkapp
+    ports:
+      - 5003:5003
+    networks:
+      - shopNet
+      - sparkNet
+
+
+
+
 volumes:
   authData:
   shopData:
+
 networks:
 
+  sparkNet:
   authNet:
   shopNet:
