--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-pyspark
-flask
+pyspark~=3.4.1
+flask~=1.1.2
+python-dateutil~=2.8.2
+requests~=2.31.0
+web3~=6.5.0
+PyJWT~=2.7.0
+redis~=5.0.0
+SQLAlchemy~=1.3.24
